// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace migration builder field actions test suite It should NOT build an update_field action for a field RELATION uncovered fields mutation 1`] = `[]`;

exports[`Workspace migration builder field actions test suite It should build a delete_field action 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "defaultValue": null,
      "description": "default flat field metadata description",
      "flatRelationTargetFieldMetadata": null,
      "flatRelationTargetObjectMetadata": null,
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": null,
      "relationTargetFieldMetadataId": null,
      "relationTargetObjectMetadataId": null,
      "settings": null,
      "standardId": null,
      "standardOverrides": null,
      "type": "TEXT",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action for a RELATION field 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "defaultValue": null,
      "description": "default flat field metadata description",
      "flatRelationTargetFieldMetadata": {
        "createdAt": Any<ClockDate>,
        "defaultValue": null,
        "description": "default flat field metadata description",
        "flatRelationTargetFieldMetadata": null,
        "flatRelationTargetObjectMetadata": null,
        "icon": "icon",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUnique": false,
        "label": "flat field metadata label",
        "name": "flatFieldMetadataName",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": null,
        "relationTargetObjectMetadataId": null,
        "settings": null,
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "uniqueIdentifier": "field-metadata-unique-identifier-2",
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
      "flatRelationTargetObjectMetadata": {
        "createdAt": Any<ClockDate>,
        "description": "default flat object metadata description",
        "duplicateCriteria": null,
        "flatFieldMetadatas": [],
        "flatIndexMetadatas": [],
        "icon": "icon",
        "id": Any<String>,
        "imageIdentifierFieldMetadataId": Any<String>,
        "isActive": true,
        "isAuditLogged": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isRemote": false,
        "isSearchable": true,
        "isSystem": false,
        "labelIdentifierFieldMetadataId": Any<String>,
        "labelPlural": "default flat object metadata label plural",
        "labelSingular": "default flat object metadata label singular",
        "namePlural": "defaultflatObjectMetadataNamePlural",
        "nameSingular": "defaultflatObjectMetadataNameSingular",
        "shortcut": "shortcut",
        "standardId": null,
        "standardOverrides": null,
        "targetTableName": "",
        "uniqueIdentifier": "object-metadata-unique-identifier-2",
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flat field metadata label",
      "name": "flatFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": null,
      "relationTargetFieldMetadataId": Any<String>,
      "relationTargetObjectMetadataId": Any<String>,
      "settings": null,
      "standardId": null,
      "standardOverrides": null,
      "type": "RELATION",
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for a RELATION field 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "update_field",
    "updates": [
      {
        "from": null,
        "property": "description",
        "to": "new description",
      },
      {
        "from": "Species",
        "property": "label",
        "to": "new label",
      },
    ],
    "workspaceId": Any<String>,
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for custom fields 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "update_field",
    "updates": [
      {
        "from": null,
        "property": "description",
        "to": "new description",
      },
      {
        "from": null,
        "property": "icon",
        "to": "new icon",
      },
    ],
    "workspaceId": Any<String>,
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an update_field action for standard field 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "update_field",
    "updates": [
      {
        "from": null,
        "property": "standardOverrides",
        "to": {
          "description": "new description",
          "icon": "new icon",
        },
      },
    ],
    "workspaceId": Any<String>,
  },
]
`;

exports[`Workspace migration builder field actions test suite It should not infer any actions as from and to fields are identical 1`] = `[]`;

exports[`Workspace migration builder index actions test suite It should build a delete_index action 1`] = `
[
  {
    "flatIndexMetadataId": Any<String>,
    "type": "delete_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should build an create_index action 1`] = `
[
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should build an delete_index and a create_index action ( the way we handle update ) 1`] = `
[
  {
    "flatIndexMetadataId": Any<String>,
    "type": "delete_index",
  },
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": "new index where clause",
      "isCustom": false,
      "isUnique": false,
      "name": "new index name",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder index actions test suite It should not infer any actions as from and to indexes are identical 1`] = `[]`;

exports[`Workspace migration builder object actions test suite It should build a create_object action 1`] = `
[
  {
    "createFieldActions": [
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "uuid",
          "description": "Id",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "Icon123",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUnique": false,
          "label": "Id",
          "name": "id",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "UUID",
          "uniqueIdentifier": "20202020-eda0-4cee-9577-3eb357e3c22b",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "'Untitled'",
          "description": "Name",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconAbc",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Name",
          "name": "name",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TEXT",
          "uniqueIdentifier": "20202020-ba07-4ffd-ba63-009491f5749c",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "now",
          "description": "Creation date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendar",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Creation date",
          "name": "createdAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "uniqueIdentifier": "20202020-66ac-4502-9975-e4d959c50311",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "now",
          "description": "Last time the record was changed",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Last update",
          "name": "updatedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "uniqueIdentifier": "20202020-d767-4622-bdcf-d8a084834d86",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Deletion date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "Deleted at",
          "name": "deletedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "uniqueIdentifier": "20202020-b9a7-48d8-8387-b9a3090a50ec",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": {
            "name": "''",
            "source": "'MANUAL'",
          },
          "description": "The creator of the record",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCreativeCommonsSa",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Created by",
          "name": "createdBy",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "ACTOR",
          "uniqueIdentifier": "20202020-be0e-4971-865b-32ca87cbb315",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": 0,
          "description": "Position",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHierarchy2",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUnique": false,
          "label": "Position",
          "name": "position",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "POSITION",
          "uniqueIdentifier": "20202020-c2bd-4e16-bb9a-c8b0411bf49d",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "TimelineActivities tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "TimelineActivities Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-0be6-444e-88f0-12e0c64ac27d",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconTimelineEvent",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "TimelineActivities",
          "name": "timelineActivities",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-f1ef-4ba4-8f33-1a4577afa477",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Favorites tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "Favorites Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-78f7-4d7d-86e9-7562ced0b381",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHeart",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "Favorites",
          "name": "favorites",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-a4a7-4686-b296-1c6c3482ee21",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Attachments tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "Attachments Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-ca2d-47c0-8253-9d0b662fb01a",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconFileImport",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "Attachments",
          "name": "attachments",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-8d59-46ca-b7b2-73d167712134",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "NoteTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "NoteTargets Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-52b6-4d5e-8f21-ed8b7c09c4a9",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "NoteTargets",
          "name": "noteTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-01fd-4f37-99dc-9427a444018a",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "TaskTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "TaskTargets Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-b98f-473d-85fb-8cebc40b9a50",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "TaskTargets",
          "name": "taskTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-0860-4566-b865-bff3c626c303",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Field used for full-text search",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": false,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "Search vector",
          "name": "searchVector",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TS_VECTOR",
          "uniqueIdentifier": "70e56537-18ef-4811-b1c7-0a444006b815",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
    ],
    "flatObjectMetadataWithoutFields": {
      "createdAt": Any<ClockDate>,
      "description": "A rocket",
      "duplicateCriteria": null,
      "icon": "IconRocket",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": null,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "Rockets",
      "labelSingular": "Rocket",
      "namePlural": "rockets",
      "nameSingular": "rocket",
      "shortcut": null,
      "standardId": null,
      "standardOverrides": null,
      "targetTableName": "DEPRECATED",
      "uniqueIdentifier": "d78ec657-74a4-4652-a350-1f44ff62970a",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a create_object and create_index actions for each of this fieldMetadata 1`] = `
[
  {
    "createFieldActions": [
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "uuid",
          "description": "Id",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "Icon123",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUnique": false,
          "label": "Id",
          "name": "id",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "UUID",
          "uniqueIdentifier": "20202020-eda0-4cee-9577-3eb357e3c22b",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "'Untitled'",
          "description": "Name",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconAbc",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Name",
          "name": "name",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TEXT",
          "uniqueIdentifier": "20202020-ba07-4ffd-ba63-009491f5749c",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "now",
          "description": "Creation date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendar",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Creation date",
          "name": "createdAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "uniqueIdentifier": "20202020-66ac-4502-9975-e4d959c50311",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": "now",
          "description": "Last time the record was changed",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Last update",
          "name": "updatedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "uniqueIdentifier": "20202020-d767-4622-bdcf-d8a084834d86",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Deletion date",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCalendarClock",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "Deleted at",
          "name": "deletedAt",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "DATE_TIME",
          "uniqueIdentifier": "20202020-b9a7-48d8-8387-b9a3090a50ec",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": {
            "name": "''",
            "source": "'MANUAL'",
          },
          "description": "The creator of the record",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCreativeCommonsSa",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": false,
          "isUnique": false,
          "label": "Created by",
          "name": "createdBy",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "ACTOR",
          "uniqueIdentifier": "20202020-be0e-4971-865b-32ca87cbb315",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": 0,
          "description": "Position",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHierarchy2",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": false,
          "isSystem": true,
          "isUnique": false,
          "label": "Position",
          "name": "position",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "POSITION",
          "uniqueIdentifier": "20202020-c2bd-4e16-bb9a-c8b0411bf49d",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "TimelineActivities tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "TimelineActivities Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-0be6-444e-88f0-12e0c64ac27d",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconTimelineEvent",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "TimelineActivities",
          "name": "timelineActivities",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-f1ef-4ba4-8f33-1a4577afa477",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Favorites tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "Favorites Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-78f7-4d7d-86e9-7562ced0b381",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconHeart",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "Favorites",
          "name": "favorites",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-a4a7-4686-b296-1c6c3482ee21",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Attachments tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "Attachments Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-ca2d-47c0-8253-9d0b662fb01a",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconFileImport",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "Attachments",
          "name": "attachments",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-8d59-46ca-b7b2-73d167712134",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "NoteTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "NoteTargets Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-52b6-4d5e-8f21-ed8b7c09c4a9",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "NoteTargets",
          "name": "noteTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-01fd-4f37-99dc-9427a444018a",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "TaskTargets tied to the Rocket",
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "TaskTargets Rocket",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": null,
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "isActive": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": true,
            "isUnique": false,
            "label": "Rocket",
            "name": "rocket",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "joinColumnName": "rocketId",
              "onDelete": "CASCADE",
              "relationType": "MANY_TO_ONE",
            },
            "standardId": Any<String>,
            "standardOverrides": null,
            "type": "RELATION",
            "uniqueIdentifier": "20202020-b98f-473d-85fb-8cebc40b9a50",
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": null,
          "icon": "IconCheckbox",
          "id": Any<String>,
          "isActive": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "TaskTargets",
          "name": "taskTargets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "RELATION",
          "uniqueIdentifier": "20202020-0860-4566-b865-bff3c626c303",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
      {
        "flatFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "Field used for full-text search",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": null,
          "icon": null,
          "id": Any<String>,
          "isActive": false,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": true,
          "isUnique": false,
          "label": "Search vector",
          "name": "searchVector",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": null,
          "relationTargetObjectMetadataId": null,
          "settings": null,
          "standardId": Any<String>,
          "standardOverrides": null,
          "type": "TS_VECTOR",
          "uniqueIdentifier": "70e56537-18ef-4811-b1c7-0a444006b815",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "type": "create_field",
      },
    ],
    "flatObjectMetadataWithoutFields": {
      "createdAt": Any<ClockDate>,
      "description": "A rocket",
      "duplicateCriteria": null,
      "icon": "IconRocket",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": null,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "Rockets",
      "labelSingular": "Rocket",
      "namePlural": "rockets",
      "nameSingular": "rocket",
      "shortcut": null,
      "standardId": null,
      "standardOverrides": null,
      "targetTableName": "DEPRECATED",
      "uniqueIdentifier": "d78ec657-74a4-4652-a350-1f44ff62970a",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
  {
    "flatIndexMetadata": {
      "createdAt": Any<ClockDate>,
      "flatIndexFieldMetadatas": [],
      "id": Any<String>,
      "indexType": "BTREE",
      "indexWhereClause": undefined,
      "isCustom": false,
      "isUnique": false,
      "name": "defaultFlatIndexMetadataName",
      "objectMetadataId": Any<String>,
      "uniqueIdentifier": "field-metadata-unique-identifier-1",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_index",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a delete_object action 1`] = `
[
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "fieldMetadataId": Any<String>,
    "objectMetadataId": Any<String>,
    "type": "delete_field",
  },
  {
    "objectMetadataId": Any<String>,
    "type": "delete_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build an update_object for custom object 1`] = `
[
  {
    "objectMetadataId": Any<String>,
    "type": "update_object",
    "updates": [
      {
        "from": "pets",
        "property": "namePlural",
        "to": "prastoins",
      },
      {
        "from": "pet",
        "property": "nameSingular",
        "to": "prastouin",
      },
    ],
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build an update_object for standard object 1`] = `
[
  {
    "objectMetadataId": Any<String>,
    "type": "update_object",
    "updates": [
      {
        "from": null,
        "property": "standardOverrides",
        "to": {
          "description": "Updated description",
        },
      },
    ],
  },
]
`;

exports[`Workspace migration builder object actions test suite It should not infer any actions as from and to are identical 1`] = `[]`;
